language strings updated, z-index fix moved to main skype class, .1 release
git-svn-id: https://plugins.svn.wordpress.org/skype-online-status/trunk@1168835 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/buttons/transparent_dropdown/dropdown.css
+++ b/buttons/transparent_dropdown/dropdown.css
@@ -2,4 +2,4 @@
 #skypeTransparentDrp img{border:none !important;margin:0 !important;padding:0 !important;display:inline}
 #skypeTransparentDrp div#skypeDropdown-transparent{margin:0 !important;padding:0 !important;clear:both !important;text-indent:0 !important;line-height:0 !important;border:none !important}
 #skypeDropdown-transparent a{display:block !important;margin:0 !important;padding:0 !important;text-indent:0!important;line-height:0 !important;border:none !important}
-#skypeTransparentDrp > div#skypeDropdown-transparent{position: absolute;z-index:1}
+#skypeTransparentDrp > div#skypeDropdown-transparent{position: absolute}
